<!--
  ~ Copyright 2018 The app Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <PreferenceCategory app:title="@string/general_header">
        <ListPreference
            app:defaultValue="cm"
            app:entries="@array/measure_unit_entries"
            app:entryValues="@array/measure_unit_values"
            app:key="measure_unit"
            app:title="@string/measure_unit_title"
            app:useSimpleSummaryProvider="true" />
        <ListPreference
            app:defaultValue="default"
            app:entries="@array/measurer_entries"
            app:entryValues="@array/measurer_values"
            app:key="measurer"
            app:title="@string/measurer_title"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            android:defaultValue="@string/default_measurer_url"
            app:key="measurer_url"
            app:title="@string/measurer_url_title"
            app:useSimpleSummaryProvider="true" />


    </PreferenceCategory>
    <PreferenceCategory app:title="@string/theme_header">
        <ListPreference
            app:defaultValue="default"
            app:entries="@array/theme_color_entries"
            app:entryValues="@array/theme_color_values"
            app:key="them_color"
            app:title="@string/theme_color_title"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:key="show_ar_label"
            app:title="@string/show_ar_label_title" />
        <ListPreference
            app:defaultValue="zh"
            app:entries="@array/language_entries"
            app:entryValues="@array/language_values"
            app:key="language"
            app:title="@string/language_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>


    <PreferenceCategory app:title="@string/history_header">
        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:key="memory"
            app:title="@string/memory_title" />
        <SwitchPreferenceCompat
            android:defaultValue="false"
            app:key="upload"
            app:title="@string/upload_title" />

        <EditTextPreference
            app:key="upload_url"
            app:title="@string/upload_url_title"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/more_header">
        <Preference app:title="@string/help_title">
            <intent
                android:targetClass="com.geekymax.volumemeasure.activity.HelpActivity"
                android:targetPackage="com.geekymax.volumemeasure" />
        </Preference>
        <Preference app:title="@string/about_title">
            <intent
                android:targetClass="com.geekymax.volumemeasure.activity.AboutActivity"
                android:targetPackage="com.geekymax.volumemeasure" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>
